2003-10-22 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/gnetlist.1: Fixed wrong command line option (-r is not a 
	valid option).  Pointed out by Stuart.

	* tests/hierarchy/*.sch *.sym: Updated to the latest sch/sym file
	format.

2003-10-19 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/vams_misc.c: Fixed up a call to o_attrib_get_name_value to
	use the new function signature.

	* src/g_rc.nw: Added the words optional and required to the 
	*rc log find messages.

	* src/s_rename.c, src/s_net.c, src/s_traverse.c: Removed all //
	comments (replaced with C comments).

2003-10-18 Ales Hvezda   <ahvezda@geda.seul.org>

	* examples/*.sch: Updated all example schematics

	* configure.ac: Updated version to something more recent, but this
	version is not an official release.
	
2003-10-04 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to something more recent, but this
        version is not an official release.

2003-10-02 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/gnet-gsch2pcb.scm: Replaced file with one from 
	Bill Wilson's gsch2pcb-1.0.1.  This fixes a guile-1.6 problem.

2003-09-27 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/gnet-gsch2pcb.scm: Replaced file with one from 
	Bill Wilson's gsch2pcb-1.0.

2003-09-20 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Fixed MinGW cflags/ldflags

        * auto* files: Updated to autoconf 2.57 and automake 1.7.6

2003-09-01 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/gnet-spice-sdb.scm, include/globals.h, include/prototype.h, 
	src/g_netlist.c, src/g_register.c, src/globals.c, src/parsecmd.c:
	Applied Stuart's latest changes to the spice-sdb netlister and added
	the -s command line flag as well as gnetlist:get-calling-flags scheme
	function.

	* tests/amp.spice-sdb, darlington.spice-sdb: Updated tests files 
	based on changes to the spice-sdb backend changes (mainly date).

2003-08-31 Ales Hvezda   <ahvezda@geda.seul.org>
